--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         .bg-bike {
             background: linear-gradient(90deg, #181818 0%, rgba(24, 24, 24, 0.82) 24.48%, rgba(24, 24, 24, 0.00) 100%), url(./images/others/banner.png)
         }
+
+        .my-container{
+            width: 80%;
+            max-width: 1125px;
+            margin: auto;
+        }
     </style>
 </head>
 
 <body class="font-Poppins">
-    <header class="bg-bike bg-center bg-no-repeat bg-cover bg-origin-border w-fit lg:w-screen">
+    <header class="bg-bike bg-center bg-no-repeat bg-cover bg-origin-border">
         <nav class="flex justify-between items-center container mx-auto px-6 lg:px-16 pt-14">
             <h2 class="text-4xl font-bold text-white  ">
                 Arafat Ride
@@ -43,7 +49,8 @@
             <h2 class="text-4xl lg:text-6xl leading-snug text-white font-bold lg:w-3/5 ">
                 Keep Your Ride Safe At Every Time
             </h2>
-            <p class="text-base text-white font-light lg:w-1/2 mt-8">Amet minim mollit non deserunt ullamco est sit aliqua
+            <p class="text-base text-white font-light lg:w-1/2 mt-8">Amet minim mollit non deserunt ullamco est sit
+                aliqua
                 dolor
                 do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
                 amet.</p>
@@ -52,7 +59,50 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <section class="my-container  mt-28 lg:mt-32 ">
+            <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Featured Bikes In This Year</h2>
+            <p class="text-sm text-[#E76F51] font-semibold text-center">Best bike collection</p>
+            <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-28 mt-12 justify-items-center ">
+                <div>
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img src="./images/others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="my-container mt-28 lg:mt-32 ">
+            <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Latest News</h2>
+            <div  class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-5 mt-12 justify-items-center">
+                <div class=" shadow-md p-5">
+                    <img src="./images/others/latest1.png" alt="">
+                    <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">Ducati XDIAVEL S-73</h2>
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
+                </div>
+                <div class=" shadow-md p-5">
+                    <img src="./images/others/latest2.png" alt="">
+                    <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">Motorcycles & Scooters</h2>
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
+                </div>
+                <div class=" shadow-md p-5">
+                    <img src="./images/others/latest3.png" alt="">
+                    <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">2021 Honda CBR500R</h2>
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                        nisi lectus at.</p>
+                    <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
