clint review section completed with responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background: linear-gradient(90deg, #181818 0%, rgba(24, 24, 24, 0.82) 24.48%, rgba(24, 24, 24, 0.00) 100%), url(./images/others/banner.png)
         }
 
-        .my-container{
+        .my-container {
             width: 80%;
             max-width: 1125px;
             margin: auto;
@@ -78,29 +78,91 @@
 
         <section class="my-container mt-28 lg:mt-32 ">
             <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Latest News</h2>
-            <div  class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-5 mt-12 justify-items-center">
+            <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-5 mt-12 justify-items-center">
                 <div class=" shadow-md p-5">
                     <img src="./images/others/latest1.png" alt="">
                     <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">Ducati XDIAVEL S-73</h2>
-                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Lacus, fermentum amet faucibus sed id
                         nisi lectus at.</p>
                     <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
                 </div>
                 <div class=" shadow-md p-5">
                     <img src="./images/others/latest2.png" alt="">
                     <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">Motorcycles & Scooters</h2>
-                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Lacus, fermentum amet faucibus sed id
                         nisi lectus at.</p>
                     <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
                 </div>
                 <div class=" shadow-md p-5">
                     <img src="./images/others/latest3.png" alt="">
                     <h2 class="text-[22px] text-[#18191F] font-semibold mt-10">2021 Honda CBR500R</h2>
-                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id
+                    <p class="text-base text-gray font-normal mt-2 mb-10">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Lacus, fermentum amet faucibus sed id
                         nisi lectus at.</p>
                     <button class=" text-white bg-[#E76F51] rounded-md text-xl font-medium p-4">Read More</button>
                 </div>
             </div>
+        </section>
+
+        <section class="my-container mt-28 lg:mt-32 ">
+            <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Happy <span
+                    class="text-[#E76F51]">Clients says</span></h2>
+            <div class="grid md:grid-cols-3 gap-10 mt-12">
+                <div class=" shadow-md p-10 text-center">
+                    <img class="w-40 mx-auto" src="./images/others/user-1.png" alt="">
+                    <p class="text-base text-gray font-normal mt-7">Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.</p>
+                    <div class="flex justify-center mt-4 gap-2 ">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-regular.svg" alt="">
+                    </div>
+                    <h3 class="text-sm text-[#23A6F0] font-semibold mt-8">Regina Miles</h3>
+                    <p class="text-sm text[#252B42] font-semibold pt-4">Banker</p>
+                </div>
+                <div class=" shadow-md p-10 text-center">
+                    <img class="w-40 mx-auto" src="./images/others/user-1.png" alt="">
+                    <p class="text-base text-gray font-normal mt-7">Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.</p>
+                    <div class="flex justify-center mt-4 gap-2 ">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-regular.svg" alt="">
+                    </div>
+                    <h3 class="text-sm text-[#23A6F0] font-semibold mt-8">Regina Miles</h3>
+                    <p class="text-sm text[#252B42] font-semibold pt-4">Banker</p>
+                </div>
+                <div class=" shadow-md p-10 text-center">
+                    <img class="w-40 mx-auto" src="./images/others/user-1.png" alt="">
+                    <p class="text-base text-gray font-normal mt-7">Slate helps you see how
+                        many more days you need
+                        to work to reach your financial
+                        goal for the month and year.</p>
+                    <div class="flex justify-center gap-2 mt-4">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-solid.svg" alt="">
+                        <img class="w-5 " src="./images/icons/star-regular.svg" alt="">
+                    </div>
+                    <h3 class="text-sm text-[#23A6F0] font-semibold mt-8">Regina Miles</h3>
+                    <p class="text-sm text[#252B42] font-semibold pt-4">Banker</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+
         </section>
     </main>
 
