--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <section class="my-container mt-28 lg:mt-32 ">
             <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Happy <span
                     class="text-[#E76F51]">Clients says</span></h2>
-            <div class="grid md:grid-cols-3 gap-10 mt-12">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mt-12">
                 <div class=" shadow-md p-10 text-center">
                     <img class="w-40 mx-auto" src="./images/others/user-1.png" alt="">
                     <p class="text-base text-gray font-normal mt-7">Slate helps you see how
@@ -161,12 +161,83 @@
             </div>
         </section>
 
-        <section>
-
+        <section class="my-container mt-28 lg:mt-32 ">
+            <h2 class="text-2xl lg:text-5xl text-black font-semibold  text-center">Frequently Asked <span
+                    class="text-[#E76F51]">Questions</span></h2>
+            <div class="flex flex-col md:flex-row justify-between pt-14 gap-20">
+                <div class="md:w-1/2">
+                    <img class="" src="./images/others/faq.png" alt="">
+                </div>
+                <div class="md:w-1/2">
+                    <div class="collapse shadow-md rounded-none">
+                        <input type="radio" name="my-accordion-1" checked="checked" />
+                        <div class="collapse-title text-xl text-[#383838] font-medium flex justify-between">
+                            What are the most important things I should
+                            know about riding a bike? <img src="./images/icons/arrow.png" alt="">
+                        </div>
+                        <div class="collapse-content">
+                            <p class="text-base text-[#7E848C] font-normal">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                laws.
+                                Get in the mindset of “driving” your bike—not just “riding” your bike. This will help
+                                you be
+                                a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+                    <div class="collapse shadow-md rounded-none">
+                        <input type="radio" name="my-accordion-1" />
+                        <div class="collapse-title text-xl text-[#383838] font-medium flex justify-between">
+                            How can I tell if my helmet is old and I need a
+                            new one? <img src="./images/icons/arrow.png" alt="">
+                        </div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse shadow-md rounded-none">
+                        <input type="radio" name="my-accordion-1" />
+                        <div class="collapse-title text-xl text-[#383838] font-medium flex justify-between">
+                            My bike has been in storage is it safe to ride? <img src="./images/icons/arrow.png" alt="">
+                        </div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse shadow-md rounded-none">
+                        <input type="radio" name="my-accordion-1" />
+                        <div class="collapse-title text-xl text-[#383838] font-medium flex justify-between">
+                            What rules should I follow when riding my bike? <img src="./images/icons/arrow.png" alt="">
+                        </div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="bg-[#0B0D17] mt-32 flex flex-col md:flex-row justify-center md:justify-around mx-auto p-4 pt-14 pb-20">
+        <div>
+            <ul class="flex gap-6 text-base text-white font-normal ">
+                <li>Download Now</li>
+                <li>License</li>
+            </ul>
+            <ul class="flex gap-6 text-white font-normal flex-wrap mt-3">
+                <li>About</li>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Careers</li>
+                <li>Help</li>
+                <li>Privacy Policy</li>
+            </ul>
+            <p class="text-sm text-[#D9DBE1] font-normal mt-6">© 2020 bike. All rights reserved</p>
+        </div>
+        <div class="space-y-2 mt-14 md:mt-0 ">
+            <h2 class="text-xl text-[#D9DBE1] font-normal">Get the App</h2>
+            <img class="w-32" src="./images/others/android.png" alt="">
+            <img class="w-32" src="./images/others/ios.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
